# stt-transcribe-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: docker.yml
app/: history_store.py  logger.py
app/api/: transcription.py
app/config/: loader.py  schema.py
app/engine/: pipeline.py  resolver.py
app/services/: audio.py  llm.py  providers.py  stt.py
config/: app.yaml  config.example.yml  config.yml.example  models.yaml.example
config/presets/: default.yaml  default.yaml.example
docs/: configuration.en.md  configuration.zh-CN.md
tests/: conftest.py  test_api.py  test_audio.py  test_config.py  test_pipeline.py  test_resolver.py
